<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

        <TextView
            android:id="@+id/login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginLogin"
            android:textAlignment="center"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/email_login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.example.storyapp.ui.login.LoginEmailCustomText
            android:id="@+id/ed_login_email"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:textSize="14sp"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10sp"
            android:padding="15sp"
            android:background="@drawable/custom_edittext"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toBottomOf="@id/email_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/password_login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ed_login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.example.storyapp.ui.login.LoginPasswordCustomText
            android:id="@+id/ed_login_password"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:hint="@string/password_hint"
            android:layout_marginHorizontal="30dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10sp"
            android:minHeight="48dp"
            android:padding="15sp"
            app:layout_constraintTop_toBottomOf="@id/password_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/ed_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/text_or"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/atau"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/btn_to_signin"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/sign_in"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/text_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>