<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signIn.SignInActivity">

    <LinearLayout
        android:id="@+id/sign_page"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_sign"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/name"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30sp"
        android:text="@string/name"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/ed_register_name"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="4sp"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10sp"
        android:padding="15sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/hint_name"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/email"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="30sp"
        android:text="@string/email"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.example.storyapp.ui.signIn.SignInEmailCustomText
        android:id="@+id/ed_register_email"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="4sp"
        android:textSize="14sp"
        android:textStyle="normal"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10sp"
        android:padding="15sp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/password"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="30sp"
        android:text="@string/password"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.example.storyapp.ui.signIn.SignInPasswordCustomText
        android:id="@+id/ed_register_password"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="4sp"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10sp"
        android:minHeight="48dp"
        android:padding="15sp"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_signin"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:text="@string/sign_in"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
            android:id="@+id/text_or"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/atau"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/btn_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/btn_to_login"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/login"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/text_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>