<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    tools:viewBindingIgnore="true"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/images_story"
            android:transitionName="profile"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="5sp"
            android:contentDescription="@string/app_name"
            android:adjustViewBounds="true"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"
            />

        <TextView
            android:id="@+id/date_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_marginTop="7sp"
            android:text="@string/date"
            android:textSize="12sp"
            card_view:layout_constraintTop_toBottomOf="@id/images_story"

            />

        <TextView
            android:id="@+id/user_story"
            android:transitionName="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_marginBottom="10sp"
            android:text="@string/caption_story"
            android:textSize="16sp"
            card_view:layout_constraintTop_toBottomOf="@id/date_story"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>