<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:id="@+id/detail_page"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:transitionName="image"
            android:contentDescription="@string/image_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/nama_user"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
            android:transitionName="user"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/description_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:transitionName="deskripsi"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            tools:text="@string/description"
            android:textColor="@color/black"
            android:transitionName="deskripsiUser"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            android:textStyle="normal"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>